crates/iql-parser/src/snapshots/issuecraft_ql__tests__comparison_operators-5.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Select(
    SelectStatement {
        columns: All,
        from: Issues,
        filter: Some(
            Comparison {
                field: "status",
                op: NotEqual,
                value: String(
                    "closed",
                ),
            },
        ),
        order_by: None,
        limit: None,
        offset: None,
    },
)
