crates/iql-parser/src/snapshots/issuecraft_ql__tests__comparison_operators.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Select(
    SelectStatement {
        columns: All,
        from: Issues,
        filter: Some(
            Comparison {
                field: "count",
                op: GreaterThan,
                value: UnsignedInteger(
                    10,
                ),
            },
        ),
        order_by: None,
        limit: None,
        offset: None,
    },
)
