crates/iql-parser/src/snapshots/issuecraft_ql__tests__deeply_nested_filters.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Select(
    SelectStatement {
        columns: All,
        from: Issues,
        filter: Some(
            And(
                Or(
                    And(
                        Comparison {
                            field: "a",
                            op: Equal,
                            value: UnsignedInteger(
                                1,
                            ),
                        },
                        Comparison {
                            field: "b",
                            op: Equal,
                            value: UnsignedInteger(
                                2,
                            ),
                        },
                    ),
                    And(
                        Comparison {
                            field: "c",
                            op: Equal,
                            value: UnsignedInteger(
                                3,
                            ),
                        },
                        Comparison {
                            field: "d",
                            op: Equal,
                            value: UnsignedInteger(
                                4,
                            ),
                        },
                    ),
                ),
                Comparison {
                    field: "e",
                    op: Equal,
                    value: UnsignedInteger(
                        5,
                    ),
                },
            ),
        ),
        order_by: None,
        limit: None,
        offset: None,
    },
)
