crates/iql-parser/src/snapshots/issuecraft_ql__tests__double_quotes_in_strings.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Create(
    Issue {
        project: "test",
        title: "Double quoted string",
        kind: Bug,
        description: None,
        priority: None,
        assignee: None,
    },
)
