crates/iql-parser/src/snapshots/issuecraft_ql__tests__empty_string_value.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Update(
    UpdateStatement {
        entity: Issue(
            IssueId(
                "backend#1",
            ),
        ),
        updates: [
            FieldUpdate {
                field: "description",
                value: String(
                    "",
                ),
            },
        ],
    },
)
