crates/iql-parser/src/snapshots/issuecraft_ql__tests__field_update_with_priority.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Update(
    UpdateStatement {
        entity: Issue(
            IssueId(
                "backend#1",
            ),
        ),
        updates: [
            FieldUpdate {
                field: "priority",
                value: Priority(
                    Critical,
                ),
            },
            FieldUpdate {
                field: "status",
                value: String(
                    "open",
                ),
            },
        ],
    },
)
