crates/iql-parser/src/snapshots/issuecraft_ql__tests__hyphenated_identifiers-2.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Create(
    Project {
        project_id: ProjectId(
            "my-cool-project",
        ),
        name: None,
        description: None,
        owner: None,
    },
)
