crates/iql-parser/src/snapshots/issuecraft_ql__tests__hyphenated_identifiers-3.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Select(
    SelectStatement {
        columns: All,
        from: Issues,
        filter: Some(
            Comparison {
                field: "project",
                op: Equal,
                value: String(
                    "my-backend-api",
                ),
            },
        ),
        order_by: None,
        limit: None,
        offset: None,
    },
)
