crates/iql-parser/src/snapshots/issuecraft_ql__tests__hyphenated_identifiers.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Create(
    User {
        username: "my-user-name",
        email: None,
        name: None,
    },
)
